--- a/Home/home-sent-invitation.html
+++ b/Home/home-sent-invitation.html
@@ -29,17 +29,11 @@
     <link rel="stylesheet" href="theme.css" />
 
     <title>Index.html</title>
-    <style>
-      /* .home_bg {
-        background-image: url("../assets/images/Mask Group 21.png");
-        background-size: cover;
-        background-repeat: no-repeat;
-      } */
-    </style>
+    <style></style>
   </head>
   <body>
     <!-- .................Home Page Sent Invitation  Start ......................... -->
-    <div class="home_bg">
+    <div class="home_bgg">
       <!-- .................Home Page Sent Invitation  NavBar Start ......................... -->
 
       <nav class="navbar navbar-expand-md navbar-light pt-5 pb-3">
@@ -95,16 +89,16 @@
           <div class="col-lg-4 col-md-6 mb-3">
             <div class="card send_invi_card1">
               <div class="container">
-                <div class="card home_card mt-5">
+                <div class="card home_card card_bg mt-4">
                   <div class="heart_icon">
                     <i class="fa fa-heart-o" aria-hidden="true"></i>
                   </div>
                   <div class="container">
-                    <div class="row">
+                    <div class="row pt-2">
                       <div class="col-lg-3 col-md-3 col-3">
                         <img src="../assets/images/Group 24.png" alt="" />
                       </div>
-                      <div class="col-lg-8 col-md-8 col-8">
+                      <div class="col-lg-9 col-md-9 col-9 p-0">
                         <div class="thamer_startrating_m">
                           <h4>thamer</h4>
                           <h6>@thamermd</h6>
@@ -115,7 +109,7 @@
                             ><i class="fa fa-star-o" aria-hidden="true"></i
                             ><i class="fa fa-star-o" aria-hidden="true"></i>
                             5.0
-                            <span class="rating_text"> $10 </span>
+                            <span class="rating_textt"> $10 </span>
                           </p>
                         </div>
                       </div>
@@ -136,11 +130,12 @@
 
                     <div class="aditya_location">
                       <p>
-                        <img
+                        <!-- <img
                           src="../assets/images/Location.svg"
                           class="img-fluid"
                           alt=""
-                        />
+                        /> -->
+                        <i class="fa fa-map-marker" aria-hidden="true"></i>
 
                         Aditya
 
@@ -152,23 +147,23 @@
                 <div class="cardbody_text">
                   <p>
                     Date
-                    <span class="pull-right">time</span>
+                    <span class="pull-right mr-5 ml-n4">time</span>
                   </p>
 
-                  <p>
-                    Select Date
-                    <span class="pull-right"> Select time</span>
-                  </p>
+                  <h6>
+                    11/09/2021
+                    <span class="pull-right"> 02:00 pm</span>
+                  </h6>
 
-                  <h3 class="pt-5">
+                  <h3 class="pt-3">
                     Stadium
                     <span class="pull-right">
                       <i class="fa fa-plus" aria-hidden="true"></i>
-                      add Stadium</span
+                      add new Stadium</span
                     >
                   </h3>
 
-                  <h3>Select Stadium</h3>
+                  <h5>Jaber Al-Ahmad International Stadium</h5>
                 </div>
                 <div class="subtitle_text">
                   <div class="container">
@@ -177,11 +172,17 @@
                       <span> Invitation Fees </span>
                       <span>Total Amount</span>
                     </p>
-                    <h3>
-                      $10
-                      <span> 25% </span>
-                      <span> $12.5 </span>
-                    </h3>
+                    <div class="d-flex justify-content-between">
+                      <h3>
+                        <sup>$</sup>
+                        10
+                      </h3>
+                      <h3>25%</h3>
+                      <h3>
+                        <sup>$</sup>
+                        12.5
+                      </h3>
+                    </div>
                   </div>
                 </div>
                 <button class="btn btn-lg btn_send w-100">send</button>
@@ -194,13 +195,13 @@
                 <div class="calendar-wrapper" id="calendar-wrapper"></div>
               </main>
             </div>
-            <div class="celender_bg mt-5 pt-4 pb-4">
+            <div class="celender_bg mt-3 pt-4 pb-3 celender_responsive">
               <div class="container">
                 <p>
                   Select Time
                   <span class="pull-right">
                     <span class="badge bg-success rounded-pill px-5">PM</span>
-                    <span class="badge bg-success rounded-pill px-5">AM</span>
+                    <span class="badge bg-successs rounded-pill px-5">AM</span>
                   </span>
                 </p>
 
@@ -232,7 +233,7 @@
                 <div class="card location_card_child">
                   <div class="row">
                     <div class="col-lg-4 col-md-4">
-                      <img src="../assets/images/Capturelocation.PNG" alt="" />
+                      <img src="../assets/images/Mask Group 3.svg" class="stadium_img" alt="" />
                     </div>
                     <div class="col-lg-8 col-md-8 pt-4">
                       <div class="container">
