--- a/Home/home.html
+++ b/Home/home.html
@@ -26,13 +26,7 @@
     <link rel="stylesheet" href="../assets/main.css" />
 
     <title>Index.html</title>
-    <style>
-      /* .home_bg {
-        background-image: url("../assets/images/Mask Group 21.png");
-        background-size: cover;
-        background-repeat: no-repeat;
-      } */
-    </style>
+    <style></style>
   </head>
   <body>
     <!-- .................Home Page Start ......................... -->
@@ -242,12 +236,12 @@
         </div>
         <!-- .................Home Page Button Group Section End ......................... -->
 
-        <div class="btn_grp pt-4 pb-5">
-          <button class="btn btn-danger btn-lg">All positions</button>
-          <button class="btn btn-danger btn-lg">All positions</button>
-          <button class="btn btn-danger btn-lg">All positions</button>
-          <button class="btn btn-danger btn-lg">All positions</button>
-          <button class="btn btn-danger btn-lg">All positions</button>
+        <div class="btn_grp pb-5">
+          <button class="btn btn-lg">All positions</button>
+          <button class="btn btn-lg">All positions</button>
+          <button class="btn btn-lg">All positions</button>
+          <button class="btn btn-lg">All positions</button>
+          <button class="btn btn-lg">All positions</button>
         </div>
         <!-- .................Home Page Button Group Section End ......................... -->
 
@@ -269,16 +263,16 @@
 
         <div class="row pb-5">
           <div class="col-lg-3 col-md-6 mb-3">
-            <div class="card home_card">
-              <div class="heart_icon">
+            <div class="card home_card card_bg">
+              <div class="heart_icon heart_iconn">
                 <i class="fa fa-heart-o" aria-hidden="true"></i>
               </div>
               <div class="container">
                 <div class="row">
-                  <div class="col-lg-4 col-md-4 col-4">
+                  <div class="col-lg-3 col-md-3 col-3">
                     <img src="../assets/images/Group 24.png" alt="" />
                   </div>
-                  <div class="col-lg-8 col-md-8 col-8">
+                  <div class="col-lg-9 col-md-9 col-9">
                     <div class="thamer_startrating_m">
                       <h4>thamer</h4>
                       <h6>@thamermd</h6>
@@ -289,7 +283,7 @@
                         ><i class="fa fa-star-o" aria-hidden="true"></i
                         ><i class="fa fa-star-o" aria-hidden="true"></i>
                         5.0
-                        <span class="rating_text"> $10 </span>
+                        <span class="rating_textt"> $10 </span>
                       </p>
                     </div>
                   </div>
@@ -310,11 +304,12 @@
 
                 <div class="aditya_location">
                   <p>
-                    <img
+                    <!-- <img
                       src="../assets/images/Location.svg"
                       class="img-fluid"
                       alt=""
-                    />
+                    /> -->
+                    <i class="fa fa-map-marker" aria-hidden="true"></i>
 
                     Aditya
 
@@ -327,14 +322,14 @@
           <div class="col-lg-3 col-md-6 mb-3">
             <div class="card home_card">
               <div class="heart_icon">
-                <i class="fa fa-heart-o" aria-hidden="true"></i>
+                <i class="fa fa-heart" aria-hidden="true"></i>
               </div>
               <div class="container">
                 <div class="row">
-                  <div class="col-lg-4 col-md-4 col-4">
+                  <div class="col-lg-3 col-md-3 col-3">
                     <img src="../assets/images/Group 24.png" alt="" />
                   </div>
-                  <div class="col-lg-8 col-md-8 col-8">
+                  <div class="col-lg-9 col-md-9 col-9">
                     <div class="thamer_startrating_m">
                       <h4>thamer</h4>
                       <h6>@thamermd</h6>
@@ -345,7 +340,7 @@
                         ><i class="fa fa-star-o" aria-hidden="true"></i
                         ><i class="fa fa-star-o" aria-hidden="true"></i>
                         5.0
-                        <span class="rating_text"> $10 </span>
+                        <span class="rating_textt"> $10 </span>
                       </p>
                     </div>
                   </div>
@@ -366,11 +361,12 @@
 
                 <div class="aditya_location">
                   <p>
-                    <img
+                    <!-- <img
                       src="../assets/images/Location.svg"
                       class="img-fluid"
                       alt=""
-                    />
+                    /> -->
+                    <i class="fa fa-map-marker" aria-hidden="true"></i>
 
                     Aditya
 
@@ -383,14 +379,14 @@
           <div class="col-lg-3 col-md-6 mb-3">
             <div class="card home_card">
               <div class="heart_icon">
-                <i class="fa fa-heart-o" aria-hidden="true"></i>
+                <i class="fa fa-heart" aria-hidden="true"></i>
               </div>
               <div class="container">
                 <div class="row">
-                  <div class="col-lg-4 col-md-4 col-4">
+                  <div class="col-lg-3 col-md-3 col-3">
                     <img src="../assets/images/Group 24.png" alt="" />
                   </div>
-                  <div class="col-lg-8 col-md-8 col-8">
+                  <div class="col-lg-9 col-md-9 col-9">
                     <div class="thamer_startrating_m">
                       <h4>thamer</h4>
                       <h6>@thamermd</h6>
@@ -401,7 +397,7 @@
                         ><i class="fa fa-star-o" aria-hidden="true"></i
                         ><i class="fa fa-star-o" aria-hidden="true"></i>
                         5.0
-                        <span class="rating_text"> $10 </span>
+                        <span class="rating_textt"> $10 </span>
                       </p>
                     </div>
                   </div>
@@ -422,11 +418,12 @@
 
                 <div class="aditya_location">
                   <p>
-                    <img
+                    <!-- <img
                       src="../assets/images/Location.svg"
                       class="img-fluid"
                       alt=""
-                    />
+                    /> -->
+                    <i class="fa fa-map-marker" aria-hidden="true"></i>
 
                     Aditya
 
@@ -438,15 +435,15 @@
           </div>
           <div class="col-lg-3 col-md-6 mb-3">
             <div class="card home_card">
-              <div class="heart_icon">
+              <div class="heart_icon heart_iconn">
                 <i class="fa fa-heart-o" aria-hidden="true"></i>
               </div>
               <div class="container">
                 <div class="row">
-                  <div class="col-lg-4 col-md-4 col-4">
+                  <div class="col-lg-3 col-md-3 col-3">
                     <img src="../assets/images/Group 24.png" alt="" />
                   </div>
-                  <div class="col-lg-8 col-md-8 col-8">
+                  <div class="col-lg-9 col-md-9 col-9">
                     <div class="thamer_startrating_m">
                       <h4>thamer</h4>
                       <h6>@thamermd</h6>
@@ -457,7 +454,7 @@
                         ><i class="fa fa-star-o" aria-hidden="true"></i
                         ><i class="fa fa-star-o" aria-hidden="true"></i>
                         5.0
-                        <span class="rating_text"> $10 </span>
+                        <span class="rating_textt"> $10 </span>
                       </p>
                     </div>
                   </div>
@@ -478,11 +475,12 @@
 
                 <div class="aditya_location">
                   <p>
-                    <img
+                    <!-- <img
                       src="../assets/images/Location.svg"
                       class="img-fluid"
                       alt=""
-                    />
+                    /> -->
+                    <i class="fa fa-map-marker" aria-hidden="true"></i>
 
                     Aditya
 
