complete changes in given screen

--- a/football_login1.html
+++ b/football_login1.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,7 +7,7 @@
      <!-- Latest compiled and minified CSS -->
      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
      <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-     <link rel="stylesheet" href="assets/css.css">
+     <link rel="stylesheet" href="assets/css/mina.css">
      <link rel="stylesheet" type="text/css" href="http://www.shieldui.com/shared/components/latest/css/light-bootstrap/all.min.css" />
     <title>football Login</title>
 </head>
@@ -53,7 +52,7 @@
 
             <!--gear store button-->
             <div class="col-xl-3 col-6 text-right">
-                <button type="button" class="btn text-white bg_green-s fs_small_for_sm-s border-0 br_10px-s py-3 px-5">Gear Store</button>
+                <button type="button" class="btn text-white bg_green-s fs_small_for_sm-s border-0 br_10px-s py-3 px-md-5 px-4">Gear Store</button>
             </div>
             <!--gear store button end-->
         </div>
@@ -105,7 +104,7 @@
                     <h5 >Find The</h5>
                 </div>
                 <div>
-                    <h1 class="fg_light_green-s">FOOTBALL PLAYERS</h1>
+                    <h1 class="fg_light_green-s fs_33px_on_sm-s">FOOTBALL PLAYERS</h1>
                 </div>
                 <div>
                     <h5 class="text-right">based on position</h5>
