--- a/favorite_player.html
+++ b/favorite_player.html
@@ -25,7 +25,7 @@
         <nav class="navbar navbar-expand-md navbar-light pt-5 pb-3">
             <div class="container-fluid">
                 <div class="row w-100">
-                    <div class="col-6">
+                    <div class="col-xl-8 col-lg-8 col-md-8 col-2">
                         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon"></span>
                         </button>
@@ -61,7 +61,7 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="col-6 text-right">
+                    <div class="col-xl-4 col-lg-4 col-md-4 col-10 pt-2 text-right">
                         <div class="">
                             <a>
                                 <img src="assets/images/Location.svg" class="img-fluid nav_location_img" alt="navbar_home" />
@@ -80,7 +80,7 @@
         <div class="container-fluid">
             <div class="row py-3">
                 <div class="col-12 ml-xl-5 pl-xl-5 pt-4">
-                    <h1>Favorites</h1>
+                    <h1 class="ft_3rem-s">Favorites</h1>
                     <p>All your favorite players.</p>
                 </div>
             </div>
@@ -90,9 +90,9 @@
         <!-- container for favorite players - start -->
         <div class="container-fluid bg-white mt-5 br_47px-s">
             <div class="row py-5">
-                <div class="col-12 py-5 text-center">
+                <div class="col-12 py-3">
                     <div class="row">
-                        <div class="col-12 col-md-6 col-lg-4 col-xl-3">
+                        <div class="col-12 col-md-6 col-lg-4 col-xl-3 py-2">
                             <div class="card home_card">
                                 <div class="heart_icon">
                                     <i class="fa fa-heart" aria-hidden="true"></i>
@@ -100,18 +100,18 @@
                                 <div class="container">
                                     <div class="row">
                                         <div class="col-lg-3 col-md-3 col-3">
-                                            <img src="../assets/images/Group 24.png" alt="" />
+                                            <img src="assets/images/Group 24.png" alt="" />
                                         </div>
                                         <div class="col-lg-9 col-md-9 col-9">
                                             <div class="thamer_startrating_m">
                                                 <h4>thamer</h4>
                                                 <h6>@thamermd</h6>
                                                 <p>
-                                                    <i class="fa fa-star-o" aria-hidden="true"></i
-                        ><i class="fa fa-star-o" aria-hidden="true"></i
-                        ><i class="fa fa-star-o" aria-hidden="true"></i
-                        ><i class="fa fa-star-o" aria-hidden="true"></i
-                        ><i class="fa fa-star-o" aria-hidden="true"></i> 5.0
+                                                    <i class="fa fa-star-o" aria-hidden="true"></i>
+                                                    <i class="fa fa-star-o" aria-hidden="true"></i>
+                                                    <i class="fa fa-star-o" aria-hidden="true"></i>
+                                                    <i class="fa fa-star-o" aria-hidden="true"></i>
+                                                    <i class="fa fa-star-o" aria-hidden="true"></i> 5.0
                                                     <span class="rating_textt"> $10 </span>
                                                 </p>
                                             </div>
@@ -143,7 +143,7 @@
                             </div>
                         </div>
 
-                        <div class="col-12 col-md-6 col-lg-4 col-xl-3">
+                        <div class="col-12 col-md-6 col-lg-4 col-xl-3 py-2">
                             <div class="card home_card">
                                 <div class="heart_icon">
                                     <i class="fa fa-heart" aria-hidden="true"></i>
@@ -151,18 +151,18 @@
                                 <div class="container">
                                     <div class="row">
                                         <div class="col-lg-3 col-md-3 col-3">
-                                            <img src="../assets/images/Group 24.png" alt="" />
+                                            <img src="assets/images/Group 24.png" alt="" />
                                         </div>
                                         <div class="col-lg-9 col-md-9 col-9">
                                             <div class="thamer_startrating_m">
                                                 <h4>thamer</h4>
                                                 <h6>@thamermd</h6>
                                                 <p>
-                                                    <i class="fa fa-star-o" aria-hidden="true"></i
-                        ><i class="fa fa-star-o" aria-hidden="true"></i
-                        ><i class="fa fa-star-o" aria-hidden="true"></i
-                        ><i class="fa fa-star-o" aria-hidden="true"></i
-                        ><i class="fa fa-star-o" aria-hidden="true"></i> 5.0
+                                                    <i class="fa fa-star-o" aria-hidden="true"></i>
+                                                    <i class="fa fa-star-o" aria-hidden="true"></i>
+                                                    <i class="fa fa-star-o" aria-hidden="true"></i>
+                                                    <i class="fa fa-star-o" aria-hidden="true"></i>
+                                                    <i class="fa fa-star-o" aria-hidden="true"></i> 5.0
                                                     <span class="rating_textt"> $10 </span>
                                                 </p>
                                             </div>
@@ -194,7 +194,7 @@
                             </div>
                         </div>
 
-                        <div class="col-12 col-md-6 col-lg-4 col-xl-3">
+                        <div class="col-12 col-md-6 col-lg-4 col-xl-3 py-2">
                             <div class="card home_card">
                                 <div class="heart_icon">
                                     <i class="fa fa-heart" aria-hidden="true"></i>
@@ -202,19 +202,18 @@
                                 <div class="container">
                                     <div class="row">
                                         <div class="col-lg-3 col-md-3 col-3">
-                                            <img src="../assets/images/Group 24.png" alt="" />
+                                            <img src="assets/images/Group 24.png" alt="" />
                                         </div>
                                         <div class="col-lg-9 col-md-9 col-9">
                                             <div class="thamer_startrating_m">
                                                 <h4>thamer</h4>
                                                 <h6>@thamermd</h6>
                                                 <p>
-                                                    <i class="fa fa-star-o" aria-hidden="true"></i
-                        ><i class="fa fa-star-o" aria-hidden="true"></i
-                        ><i class="fa fa-star-o" aria-hidden="true"></i
-                        ><i class="fa fa-star-o" aria-hidden="true"></i
-                        ><i class="fa fa-star-o" aria-hidden="true"></i> 5.0
-                                                    <span class="rating_textt"> $10 </span>
+                                                    <i class="fa fa-star-o" aria-hidden="true"></i>
+                                                    <i class="fa fa-star-o" aria-hidden="true"></i>
+                                                    <i class="fa fa-star-o" aria-hidden="true"></i>
+                                                    <i class="fa fa-star-o" aria-hidden="true"></i>
+                                                    <i class="fa fa-star-o" aria-hidden="true"></i> 5.0 <span class="rating_textt"> $10 </span>
                                                 </p>
                                             </div>
                                         </div>
@@ -245,7 +244,7 @@
                             </div>
                         </div>
 
-                        <div class="col-12 col-md-6 col-lg-4 col-xl-3">
+                        <div class="col-12 col-md-6 col-lg-4 col-xl-3 py-2">
                             <div class="card home_card">
                                 <div class="heart_icon">
                                     <i class="fa fa-heart" aria-hidden="true"></i>
@@ -253,18 +252,18 @@
                                 <div class="container">
                                     <div class="row">
                                         <div class="col-lg-3 col-md-3 col-3">
-                                            <img src="../assets/images/Group 24.png" alt="" />
+                                            <img src="assets/images/Group 24.png" alt="" />
                                         </div>
                                         <div class="col-lg-9 col-md-9 col-9">
                                             <div class="thamer_startrating_m">
                                                 <h4>thamer</h4>
                                                 <h6>@thamermd</h6>
                                                 <p>
-                                                    <i class="fa fa-star-o" aria-hidden="true"></i
-                        ><i class="fa fa-star-o" aria-hidden="true"></i
-                        ><i class="fa fa-star-o" aria-hidden="true"></i
-                        ><i class="fa fa-star-o" aria-hidden="true"></i
-                        ><i class="fa fa-star-o" aria-hidden="true"></i> 5.0
+                                                    <i class="fa fa-star-o" aria-hidden="true"></i>
+                                                    <i class="fa fa-star-o" aria-hidden="true"></i>
+                                                    <i class="fa fa-star-o" aria-hidden="true"></i>
+                                                    <i class="fa fa-star-o" aria-hidden="true"></i>
+                                                    <i class="fa fa-star-o" aria-hidden="true"></i> 5.0
                                                     <span class="rating_textt"> $10 </span>
                                                 </p>
                                             </div>
@@ -286,9 +285,7 @@
 
                                     <div class="aditya_location">
                                         <p>
-
                                             <i class="fa fa-map-marker" aria-hidden="true"></i> Aditya
-
                                             <span class="pull-right"> send message >> </span>
                                         </p>
                                     </div>
