--- a/no_favorite_player.html
+++ b/no_favorite_player.html
@@ -25,7 +25,7 @@
         <nav class="navbar navbar-expand-md navbar-light pt-5 pb-3">
             <div class="container-fluid">
                 <div class="row w-100">
-                    <div class="col-6">
+                    <div class="col-xl-8 col-lg-8 col-md-8 col-2">
                         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon"></span>
                         </button>
@@ -61,7 +61,7 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="col-6 text-right">
+                    <div class="col-xl-4 col-lg-4 col-md-4 col-10 pt-2 text-right">
                         <div class="">
                             <a>
                                 <img src="assets/images/Location.svg" class="img-fluid nav_location_img" alt="navbar_home" />
@@ -80,7 +80,7 @@
         <div class="container-fluid">
             <div class="row py-3">
                 <div class="col-12 ml-xl-5 pl-xl-5 pt-4">
-                    <h1>Favorites</h1>
+                    <h1 class="ft_3rem-s">Favorites</h1>
                     <p>All your favorite players.</p>
                 </div>
             </div>
