complete 21,22,24,26 and 27 screen

--- a/accept_invitation_modal.html
+++ b/accept_invitation_modal.html
@@ -9,16 +9,16 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/mina.css">
     <link rel="stylesheet" type="text/css" href="http://www.shieldui.com/shared/components/latest/css/light-bootstrap/all.min.css" />
-    <title>Send Invitation</title>
+    <title>Accept Invitation</title>
 </head>
 <body>
     <div class="container-fluid">
-        <button type="button" class="btn btn-primary mt-3" data-toggle="modal" data-target="#send_invitation_modal-d">
-            Send Invitation
+        <button type="button" class="btn btn-primary mt-3" data-toggle="modal" data-target="#accept_invitation_modal-d">
+            ACCEPT Invitation
         </button>
     
         <!-- Modal -->
-        <div class="modal fade" id="send_invitation_modal-d" tabindex="-1" aria-labelledby="view-head" aria-hidden="true">
+        <div class="modal fade" id="accept_invitation_modal-d" tabindex="-1" aria-labelledby="view-head" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered ">
                 <div class="modal-content br_10px-s border-0">
                     <div class="container-fluid">
@@ -33,8 +33,8 @@
                         <div class="row modal-body ">
                             <!--modal text-->
                             <div class="col-12 text-center">
-                                <h4 class="fg_green-s">SEND INVITATION</h4>
-                                <h6><strong>Are you sure you want to send this invitation?</strong></h6>
+                                <h4 class="fg_green-s">ACCEPT INVITATION</h4>
+                                <h6><strong>Are you sure you want to accept this invitation?</strong></h6>
                             </div>
                             <!--modal text end-->
 
@@ -97,6 +97,7 @@
             </div>
         </div>
     </div>
+    
     <!-- jQuery library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js "></script>
 
