--- a/cancel_invitation_modal.html
+++ b/cancel_invitation_modal.html
@@ -9,16 +9,16 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/mina.css">
     <link rel="stylesheet" type="text/css" href="http://www.shieldui.com/shared/components/latest/css/light-bootstrap/all.min.css" />
-    <title>Send Invitation</title>
+    <title>Cancel Invitation</title>
 </head>
 <body>
     <div class="container-fluid">
-        <button type="button" class="btn btn-primary mt-3" data-toggle="modal" data-target="#send_invitation_modal-d">
-            Send Invitation
+        <button type="button" class="btn btn-primary mt-3" data-toggle="modal" data-target="#cancel_invitation_modal-d">
+            CANCEL Invitation
         </button>
     
         <!-- Modal -->
-        <div class="modal fade" id="send_invitation_modal-d" tabindex="-1" aria-labelledby="view-head" aria-hidden="true">
+        <div class="modal fade" id="cancel_invitation_modal-d" tabindex="-1" aria-labelledby="view-head" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered ">
                 <div class="modal-content br_10px-s border-0">
                     <div class="container-fluid">
@@ -33,8 +33,8 @@
                         <div class="row modal-body ">
                             <!--modal text-->
                             <div class="col-12 text-center">
-                                <h4 class="fg_green-s">SEND INVITATION</h4>
-                                <h6><strong>Are you sure you want to send this invitation?</strong></h6>
+                                <h4 class="fg_green-s">CANCEL INVITATION</h4>
+                                <h6><strong>Are you sure you want to cancel this invitation?</strong></h6>
                             </div>
                             <!--modal text end-->
 
@@ -48,7 +48,7 @@
                                         </div>
                                         <div class="ml-2 text-left">
                                             <h6 class="fg_green-s mb-0">Thamer</h6>
-                                            <a href="javascript:void(0)" class="opacity_4-s text-dark">@thamedmd</a>
+                                            <span class="opacity_4-s">@thamedmd</span>
                                             <div class="">
                                                 <img class="star_img-s" src="assets/images/yellow_star.svg" alt="star img">
                                                 <img class="star_img-s"  src="assets/images/yellow_star.svg" alt="star img">
@@ -97,6 +97,7 @@
             </div>
         </div>
     </div>
+        
     <!-- jQuery library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js "></script>
 
